# bika_backend

./: .copier-answers.yml  .gitignore  .gitlint  .pre-commit-config.yaml  Makefile  Procfile  README.md  compose.yaml  conftest.py  project.toml  pyproject.toml  tasks.py  uwsgi.ini
.github/: CODEOWNERS  pull_request_template.md  settings.yaml
.github/workflows/: run_pre_commit.yaml
apps/: conftest.py
apps/assignment/: apps.py  constants.py
apps/assignment/admin/: __init__.py  assignment.py  task.py
apps/assignment/api/: urls.py
apps/assignment/api/serializers/: __init__.py  assignment.py  task.py
apps/assignment/api/views/: __init__.py  assignment.py  task.py
apps/assignment/factories/: __init__.py  assignment.py  task.py
apps/assignment/filters/: __init__.py  assignment.py  task.py
apps/assignment/migrations/: 0001_initial.py  0002_assignment_creator_task_assignee.py  0003_task_creator.py
apps/assignment/models/: __init__.py  assignment.py  tasks.py
apps/auth/: apps.py
apps/auth/api/: scheme.py  serializers.py  urls.py  views.py
apps/auth/notifications/: __init__.py  reset_password.py
apps/auth/services/: __init__.py  reset_password.py
apps/auth/tests/test_api/: test_change_password_api.py  test_reset_password_api.py
apps/core/: views.py
apps/core/api/: mixins.py  serializers.py  views.py
apps/core/tests/: test_health_checks.py  test_index_view.py  test_open_api.py
apps/users/: apps.py  constants.py  permissions.py
apps/users/admin/: user.py
apps/users/api/: urls.py
apps/users/api/serializers/: user.py
apps/users/api/views/: __init__.py  profile.py  user.py
apps/users/factories/: __init__.py  user.py
apps/users/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_role.py
apps/users/models/: user.py
apps/users/tests/test_api/profile/: test_retrieve.py  test_update.py
apps/users/tests/test_api/user/: conftest.py  test_list.py  test_retrieve.py
config/: celery.py
config/settings/: .env.local  .env.template  config.py  local.py
config/settings/common/: __init__.py  cache.py  celery.py  dev_tools.py  drf.py  health_check.py  installed_apps.py  sentry.py  shell.py  storage.py
config/urls/: __init__.py  api.py  debug.py  open_api.py
docs/: CHANGELOG.md  ENVIRONMENT.md  INSTALL.md  TODO.md
invocations/: ci.py  frontend.py  gitlint_custom_rules.py  project.py
libs/: permissions.py  utils.py
libs/api/: filter_backends.py  renderers.py
libs/health_checks/: urls.py  views.py
libs/health_checks/backends/: email.py
libs/notifications/: email.py
libs/open_api/: filters.py  serializers.py
templates/: base.html  index.html
